minor css correction , bug fix needed for index going out of bound for 2d matrix

--- a/data-visualization/React-projects/react-dungeon-crawler/src/App.css
+++ b/data-visualization/React-projects/react-dungeon-crawler/src/App.css
@@ -34,7 +34,6 @@ body {
     float: left;
     height: 45px;
     width: 25px;
-    border-radius:5px;
     background: #CF1020;
 }
 
